# Sentinel

./: .gitignore  README.md  app.db  pyproject.toml  test.db
app/: .gitignore  main.py  sentinel.db
app/api/: deps.py  router.py
app/api/routes/: auth_routes.py  camera_routes.py  detection_routes.py  incident_routes.py  person_routes.py  platform_routes.py  poi_routes.py  surveillance_routes.py  tenant_routes.py  user_routes.py  websocket_routes.py
app/core/: config.py  scheduler.py  security.py
app/db/: base.py  session.py
app/models/: camera.py  customer_visit.py  detection_event.py  guardian.py  incident.py  journey_event.py  notification_log.py  notification_recipient.py  person.py  poi.py  poi_sighting.py  tenant.py  user.py
app/repositories/: user_repository.py
app/schemas/: camera.py  detection.py  incident.py  person.py  platform.py  poi.py  surveillance.py  tenant.py  user.py
app/services/: event_bus.py  ml_client.py  notification_service.py  surveillance_service.py  tenant_service.py  user_service.py
app/utils/: file_manager.py
frontend/: package-lock.json  package.json
ml/: __init__.py  config.py  dependencies.py  main.py
ml/api/: __init__.py  audio_routes.py  behavior_routes.py  face_routes.py  fire_routes.py  frame_routes.py  health_routes.py  person_routes.py  reid_routes.py  router.py  stream_routes.py
ml/models/: __init__.py  audio_classifier.py  behavior_classifier.py  emotion_classifier.py  face_detector.py  face_recognizer.py  fire_detector.py  person_detector.py  pose_estimator.py  reid_extractor.py
ml/pipeline/: __init__.py  frame_pipeline.py  threat_fusion.py  worker_pool.py
ml/schemas/: __init__.py  requests.py  responses.py
ml/utils/: __init__.py  device.py  file_utils.py  image_utils.py  serialization.py
ml/weights/: README.md
tests/: conftest.py  test_camera.py  test_ml_worker_pool.py  test_platform.py  test_surveillance.py
(+39 files in other folders)
