[project]
name = "sentinel"
version = "0.1.0"
description = "AI-powered safety and surveillance platform"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    # --- Shared ---
    "fastapi",
    "pydantic-settings>=2.14.1",
    "pydantic[email]>=2.13.4",
    "uvicorn>=0.49.0",
    # --- Backend ---
    "sqlalchemy>=2.0.51",
    # --- ML ---
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "ultralytics>=8.0.0",
    "opencv-python-headless>=4.8.0",
    "numpy>=1.24.0",
    "insightface>=0.7.0",
    "onnxruntime>=1.15.0",
]

[project.scripts]
sentinel = "app.main:app"

[tool.hatch.build.targets.wheel]
packages = ["app", "ml"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

