[project]
name = "sentinel"
version = "0.1.0"
description = "AI-powered safety and surveillance platform"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    # --- Shared ---
    "fastapi",
    "pydantic-settings>=2.14.1",
    "pydantic[email]>=2.13.4",
    "uvicorn>=0.49.0",
    "websockets",
    # --- Backend ---
    "sqlalchemy>=2.0.51",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.2.1",
    "httpx>=0.25.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "apscheduler>=3.10.4",
    "africastalking>=2.0.0",
    # --- ML ---
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "ultralytics>=8.0.0",
    "opencv-python-headless>=4.8.0",
    "numpy>=1.24.0",
    "insightface>=0.7.0",
    "onnxruntime>=1.15.0",
    "torchreid>=0.2.5",
]

[project.scripts]
sentinel = "app.main:app"

[tool.hatch.build.targets.wheel]
packages = ["app", "ml"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

